--- a/package.json
+++ b/package.json
@@ -28,9 +28,8 @@
     "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron ./app/main.dev",
     "start-renderer-dev": "cross-env NODE_ENV=development node --trace-warnings -r @babel/register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack.config.renderer.dev.js",
     "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 node --trace-warnings ./test/runTests.js",
-    "test-e2e": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 node --trace-warnings ./test/runTests.js e2e",
     "test-watch": "npm test -- --watch",
-    "test:e2e": "./node_modules/mocha/bin/mocha tests/test.js",
+    "run-tests": "./node_modules/mocha/bin/mocha tests/test.js",
     "version2": "node ./internals/scripts/UpdateBuildDate.js",
     "extract-changes": "node ./internals/scripts/extractTranslationChanges.js",
     "update-translations": "node ./internals/scripts/updateTranslations.js"
